starting typescript integration - start of OOPS in this project

--- a/handlebarstut3.html
+++ b/handlebarstut3.html
@@ -2,118 +2,91 @@
 <html>
 <head>
   <title>Hello Handlebars</title>
-
-  <style type="text/css">
-      .redText {color: red;}
-      .blueText {color: blue;}
-      .greenText {color: green;}
-  </style>
-
-  <!-- You can download Handlebars at http:// handlebarsjs.com/ and save it as handlebars-v4.0.2.js on your site. Then make it available by adding the following line. -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
-
 </head>
 <body>
 
-  <div id="quoteData"></div>
+<div id="contentDiv"></div>
 
-  <!-- It is better to separate your template from the JS and you do that by placing the template in its own tag -->
-  <script id="quote-template" type="text/x-handlebars-template">
+<script id="the-template" type="text/x-handlebars-template">
 
-  <h3>Favorite {{name}} Quotes</h3>
-    <ol>
-    {{!-- 2. The each helper can insert an array of data --}}
-    {{#each quotes}}
-      <li>{{quote}}</li>
-    {{/each}}
-    </ol>
+{{!-- 7. Block helper that receives the name value for the radio buttons --}}
+{{#makeRadio "size"}}
+  Small
+  Medium
+  Large
+{{/makeRadio}}
 
-    {{!-- 3. You can use Html tags with triple-stash --}}
-    {{{yogiBio}}}<br /><br />
+{{!-- 8. You can place an {{else}} tag in your block helpers to create alternative template functions. Here well check for equality of 2 passed values --}}
+{{#areEqual 1 1}}
+  Numbers are equal
+{{else}}
+  Numbers are not equal
+{{/areEqual}}<br />
 
-    {{!-- 4. Call to custom Helper function, which will generate html tags without the triple-stash --}}
-    {{makeLink "Yogi Berra Museum" "http://yogiberramuseum.org/"}}<br />
+{{!-- 9. Handlebars has a built in if conditional that we can use to display different results --}}
+{{#if "isActive"}}
+  <img src="ntt-logo.png" alt="Active">
+{{else}}
+  <img src="ntt-logo-horz.png" alt="Inactive">
+{{/if}}
 
-    {{!-- 5. Pass attributes to a Helper --}}
-    {{changeColor "Make my text red" color="blue"}}<br />
+</script>
 
-    {{!-- 6. Say hello in defined language --}}
-    {{sayHello}}
+<script type="text/javascript">
 
-  </script>
+// Assign the template name
+var templateInfo = document.getElementById("the-template").innerHTML;
 
-  <script type="text/javascript">
+  // Compile the template
+  var template = Handlebars.compile(templateInfo);
 
-  var quoteInfo = document.getElementById("quote-template").innerHTML;
+  // 7b. Create the helper that generates radio buttons
+  Handlebars.registerHelper("makeRadio", function(name, options){
 
-  var template = Handlebars.compile(quoteInfo);
+      // Save the string that the function returns
+      var radioList = options.fn();
 
-  // 4b. You can create your own helper functions
-  // This returns a link when text and url are passed in
-  // escapeExpression() escapes the passed string so it is
-  // safe to use in content. Helpers should use this method
-  // when returning content to avoid code injection
-  Handlebars.registerHelper("makeLink", function(text, url){
-    text = Handlebars.Utils.escapeExpression(text);
-    url = Handlebars.Utils.escapeExpression(url);
+      // Split the results at the \n
+      radioList = radioList.trim().split("\n");
 
-    var theLink = '<a href="' + url + '">' + text + '</a>';
+      var output = "";
 
-    // SafeString prevents the string from being escaped
-    return new Handlebars.SafeString(theLink);
-  });
-
-  // 5b. Pass an attribute to a helper function
-  Handlebars.registerHelper("changeColor", function(text, options){
-
-    text = Handlebars.Utils.escapeExpression(text);
-
-      // You can access the attributes by name
-      if(options.hash.color === "red"){
-        return new Handlebars.SafeString("<span class='redText'>" + text + "</span>");
-      } else if(options.hash.color === "blue"){
-        return new Handlebars.SafeString("<span class='blueText'>" + text + "</span>");
-      } else {
-          return new Handlebars.SafeString("<span class='greenText'>" + text + "</span>");
+      // Cycle through the results and place them in radio elements
+      for(var val in radioList){
+        var item = radioList[val].trim();
+        output += '<input type="radio" name="' + name + '" value="' + item + '">' + item + '<br />';
       }
+      return output;
   });
 
-  // 6b. You can also pass options that can be used by all
-  // helpers in the template
-  Handlebars.registerHelper("sayHello", function(options){
-    switch(options.data.lang){
-      case "spanish":
-        return "Hola";
-        break;
-      case "french":
-        return "Bonjour";
-        break;
-      default:
-        return "Hello";
+  // 8b. 2 values are passed and depending on equality we will
+  // execute fn() or inverse()
+  Handlebars.registerHelper("areEqual", function(num1, num2, options){
+    if(num1 === num2){
+      return options.fn(this);
+    } else {
+      return options.inverse(this);
     }
   });
 
-  // 2b. Passing the array data
-  var quoteData = template({
-    name: "Yogi Berra",
-    quotes: [
-      {quote: "If you don't know where you are going, you might wind up someplace else."},
-      {quote: "You better cut the pizza in four pieces because I'm not hungry enough to eat six."},
-      {quote: "I never said most of the things I said."},
-      {quote: "Nobody goes there anymore because it's too crowded."}
-    ],
-    // 3b. Passing tags to the triple stash
-    yogiBio: '<i>Lawrence Peter "Yogi" Berra (May 12, 1925 - September 22, 2015) was an American professional baseball catcher, manager, and coach who played 19 seasons in Major League Baseball (MLB) (1946 - 63, 1965), all but the last for the New York Yankees. An 18-time All-Star and 10-time World Series champion as a player, Berra had a career batting average of .285, while compiling 358 home runs and 1,430 runs batted in.</i>'
-  }
-  // 6c. Say hello in passed language
-  , {data: {
-    lang: "spanish"
-  }
+  // 9b. In a similar way we can display different results
+  // based on a value passed into our function
+  Handlebars.registerHelper("if", function(data, options){
+    if(data === "isActive"){
+      return options.fn(this);
+    } else {
+      return options.inverse(this);
+    }
   });
 
-  document.getElementById('quoteData').innerHTML += quoteData;
+  // If there is nothing to pass keep this blank
+  var templateData = template({});
 
-  </script>
+  document.getElementById('contentDiv').innerHTML += templateData;
+
+</script>
+
 
 </body>
 </html>
