--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.5" />
     <!--
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
-    <script src="main.js"></script>
     -->
+    <script src="main.js"></script>
+
   </head>
   <body>
     <table>
@@ -20,12 +21,12 @@
         </tr>
         <tr>
           <td>
-            <button type="button">Start</button>
+            <button id="butstart" type="button">Start</button>
           </td>
         </tr>
         <tr>
           <td>
-            <button type="button">+</button>
+            <button type="butplus">+</button>
           </td>
         </tr>
         <table>
@@ -45,7 +46,7 @@
         </table>
         <tr>
           <td>
-            <button type="button">-</button>
+            <button type="butminus">-</button>
           </td>
         </tr>
       </tbody>
