--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <!--
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
     -->
-    <script src="main.js"></script>
+
+    <script src="betsu.js"></script>
+    <script src="page.js"></script>
 
   </head>
   <body>
